<resources>
    <string name="app_name">MoviesVisitTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Add Movie</string>
    <string name="menu_slideshow">Add Theatre</string>
    <string name="menu_movie_visit">Add movie visit</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="enter_theatre_name">Enter theatre name</string>
    <string name="enter_theatre_location">enter theatre location</string>
    <string name="theatre_name">Theatre name  :</string>
    <string name="theatre_location">theatre location  :</string>
    <string name="submit">Submit</string>
    <string name="num_movies_watched">Number of movies watched:</string>
</resources>
