<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="skven.com.moviesvisittracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_add_movie"
        android:name="skven.com.moviesvisittracker.ui.addMovie.AddMovieFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_add_movie" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="skven.com.moviesvisittracker.ui.addTheatre.AddTheatreFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_add_theatre" />

    <fragment
        android:id="@+id/nav_movie_visit"
        android:name="skven.com.moviesvisittracker.ui.addMovieVisit.AddMovieVisitFragment"
        android:label="@string/menu_movie_visit"
        tools:layout="@layout/fragment_add_movie_visit" />


</navigation>